# DavidosBot

./: .env_template  .gitignore  README.md  pyproject.toml
src/davidosbot/: bot.py
