[project]
name = "DavidosBot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Buchmann", email = "david@davidosb.de"},
]
dependencies = ["twitchio>=2.10.0", "python-dotenv>=1.0.1", "playsound==1.2.2", "requests>=2.32.3"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
